# trellisdata

./: README.md  setup.cfg  setup.py
src/trellisdata/: __init__.py  database_query.py  database_trigger.py  job_launcher.py  messages.py  messaging.py  operation_grapher.py  utils.py
tests/: sample-database-query.yaml  test_database_query.py  test_database_triggers.py  test_hydration_handler.py  test_job_launcher.py  test_messages.py  test_messaging.py  test_neo4j_results.py  test_operation_grapher.py  test_query_response_handler.py  test_utils.py
tests/sample_inputs/: create-blob-queries.yaml  job-launcher.yaml  job-sources.yaml  pilot-db-queries-2.yaml  pilot-db-queries.yaml  pilot-db-triggers-bad.yaml  pilot-db-triggers.yaml  pilot-job-launcher.yaml  pilot-write-db-query.yaml  query-response-old.json  trellis-config.yaml  trellis-graph-as-json.txt
trellisdata/: __init__.py  messages.py  test_triggers.py
