[metadata]
name = trellisdata
version = 0.1.11
description = Tools for implementing a Trellis data management system
url = https://github.com/StanfordBioinformatics/trellisdata
project_urls = 
    ReadTheDocs = https://trellis-data-management.readthedocs.io
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
author = Paul Billing-Ross
author_email = pbilling@stanford.edu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    neo4j >= 4.4.0
    anytree >= 2.8.0

[options.packages.find]
where = src
